src/z80asm/z80asm2/t/20-preproc/expected/assume_01.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/assume_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/20-preproc/input/assume_01.asm...
t/20-preproc/input/assume_01.asm:1:8: error: Expected ADL after ASSUME
    .assume
           ^
t/20-preproc/input/assume_01.asm:2:9: error: Expected ADL after ASSUME
    .assume xpto
            ^
t/20-preproc/input/assume_01.asm:3:13: error: Expected '=' after ASSUME ADL
    .assume adl !
                ^
t/20-preproc/input/assume_01.asm:4:13: error: Expected 0/1 after ASSUME ADL =
    .assume adl=42
                ^
t/20-preproc/input/assume_01.asm:5:2: error: ADL not supported on z80
    .assume adl=0
     ^
t/20-preproc/input/assume_01.asm:6:2: error: ADL not supported on z80
    .assume adl=1
     ^
